# CRMEvent

./: .gitignore
backend/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/alembic/: env.py
backend/crmevent/: main.py
backend/crmevent/core/: security.py
backend/crmevent/db/: base.py  init_db.py  session.py
backend/crmevent/models/: activity.py  company.py  contact.py  event.py  invoice.py  opportunity.py  quote.py  users.py
backend/crmevent/routers/: activity.py  company.py  contact.py  event.py  invoice.py  opportunity.py  quote.py  users.py
backend/crmevent/schemas/: activity.py  company.py  contact.py  event.py  invoice.py  opportunity.py  quote.py  users.py
backend/crmevent/services/: activity.py  company.py  contact.py  event.py  invoice.py  opportunity.py  quote.py  users.py  workflow.py
frontend/crmevent-front/: README.md  package-lock.json  package.json
frontend/crmevent-front/pages/: Login.vue  Opportunitues.vue  Register.vue
frontend/crmevent-front/src/: main.js
frontend/crmevent-front/src/components/dashboard/: Header.vue  NextEventCard.vue  ProvidersCard.vue  StatsCard.vue  TasksCard.vue  TimelineCard.vue  UpcomingEvents.vue
frontend/crmevent-front/src/layouts/: DashboardLayout.vue  Sidebar.vue
frontend/crmevent-front/src/pages/: Companies.vue  Dashboard.vue  Events.vue  Home.vue  Quotes.vue  Register.vue
frontend/crmevent-front/src/plugins/: vuetify.js
frontend/crmevent-front/src/router/: index.js
frontend/crmevent-front/src/services/: eventService.js
frontend/crmevent-front/src/stores/: event.js
